# daily_rss_digest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_digest.yml
src/: config.py  feed_fetcher.py  main.py  ranker.py  telegram_sender.py
