[project]
name = "rss-digest"
version = "0.1.0"
description = "Automated RSS daily digest via Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0,<7.0",
    "httpx>=0.27,<1.0",
    "openai>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
]

[project.scripts]
rss-digest = "src.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
